# fastapi_test

./: .gitignore  README.md  alembic.ini  manage.py  pyproject.toml  requirements.txt  start-dev.sh  start-prod.sh  stop-all.sh  task_que.sh
alembic/: env.py
alembic/versions/: 4cf1c9aa2e98_initial_schema.py  ecb2d635a222_initial_schema.py
app/: agents.py  app.py  celery.py  models.py  schemas.py  socketio.py  utils.py
app/tests/: test_agents.py  test_alembic.py  test_app.py  test_models.py  test_socketio.py
static/: scripts.js  styles.css
templates/: index.html
