[project]
package = false
name = "fastapi-test"
version = "0.1.0"
description = "Test Project"
authors = [
    {name = "freedom-k-m365group",email = "freedom.k@m365connect.com"}
]
requires-python = ">=3.12,<4.0.0"

dependencies = [
    "fastapi[standard] (>=0.120.0,<0.121.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "langchain (>=1.0.2,<2.0.0)",
    "langchain-google-genai (>=3.0.0,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=7.0.0,<8.0.0)",
    "python-socketio (>=5.14.2,<6.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "click (>=8.3.0,<9.0.0)"
]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pep8 (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
